Tentative de création d'une grille

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Robot Javascript</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="plateau">
+    </div>
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<script src="grille.js"></script>
 <script src="robot.js"></script>
 <script src="mechant.js"></script>
 <script src="main.js"></script>
