--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Robot Javascript</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -13,10 +13,11 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="grille.js"></script>
-<script src="robot.js"></script>
-<script src="mechant.js"></script>
-<script src="main.js"></script>
+<script src="js/grille.js"></script>
+<script src="js/weapon.js"></script>
+<script src="js/robot.js"></script>
+<script src="js/mechant.js"></script>
+<script src="js/main.js"></script>
 
 </html>
 
