Ajout des murs et de l'aléatoire

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="js/grille.js"></script>
+<script src="js/functions.js"></script>
+<script src="js/board.js"></script>
+<script src="js/wall.js"></script>
 <script src="js/weapon.js"></script>
 <script src="js/robot.js"></script>
 <script src="js/mechant.js"></script>
 <script src="js/main.js"></script>
-
 </html>
 
