--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="js/functions.js"></script>
-<script src="js/board.js"></script>
+<script src="js/config.js"></script>
+<script src="js/grid.js"></script>
 <script src="js/wall.js"></script>
 <script src="js/weapon.js"></script>
 <script src="js/robot.js"></script>
