--- a/etape 2/index.html
+++ b/etape 2/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="plateau">
+    <div class="board">
     </div>
 
 </body>
@@ -18,7 +18,6 @@
 <script src="js/wall.js"></script>
 <script src="js/weapon.js"></script>
 <script src="js/robot.js"></script>
-<script src="js/mechant.js"></script>
 <script src="js/main.js"></script>
 </html>
 
