Ajout du bouton 'Fin du tour"  qui permet de passer du joueur 1 au joueur 2

--- a/etape 2/index.html
+++ b/etape 2/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="board">
     </div>
+    <button id="endTurn">Fin du tour</button>
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
