Mise en place du système de combat

--- a/etape 3/index.html
+++ b/etape 3/index.html
@@ -9,10 +9,18 @@
 
 <body>
     <div class="board">
+        <div id="actionChoice" title="Combat !" hidden>
+            <p>
+                Que voulez-vous faire ?
+            </p>
+        </div>
     </div>
 </body>
+<link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/config.js"></script>
+<script src="js/functions.js"></script>
 <script src="js/grid.js"></script>
 <script src="js/wall.js"></script>
 <script src="js/weapon.js"></script>
