fonction newGame() qui demande si on veut refaire une partie

--- a/etape 3/index.html
+++ b/etape 3/index.html
@@ -14,6 +14,11 @@
                     Que voulez-vous faire ?
                 </p>
             </div>
+            <div id="newGame" title="Nouvelle partie ?" hidden>
+                <p>
+                    Voulez-vous faire une nouvelle partie ?
+                </p>
+            </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
