--- a/etape 3/index.html
+++ b/etape 3/index.html
@@ -10,7 +10,11 @@
     <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet"/>
 </head>
     <body class="container-fluid">
-        <div class="player1 col-md-3"></div>
+        <div class="player1 col-md-3">
+            <div class='row' id="namePlayer1"></div>
+            <div class='row' id="lifePoints1"></div>
+            <div class='row' id="weapon1"></div>
+        </div>
         <div class="board col-md-6">
             <div id="actionChoice" title="Combat !" hidden>
                 <p>
@@ -23,7 +27,11 @@
                 </p>
             </div>
         </div>
-        <div class="player2 col-md-3"></div>
+        <div class="player2 col-md-3">
+            <div class='row' id="namePlayer2"></div>
+            <div class='row' id="lifePoints1"></div>
+            <div class='row' id="weapon2"></div>
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="js/config.js"></script>
