Fonction updateStatistics() qui actualise les informations du joueur à chaque action (mouvement, attaque, défense) grâce à une requête ajax (.load)

--- a/etape 3/index.html
+++ b/etape 3/index.html
@@ -14,6 +14,7 @@
             <div class='row' id="namePlayer1"></div>
             <div class='row' id="lifePoints1"></div>
             <div class='row' id="weapon1"></div>
+            <div class='row' id="protect1"></div>
         </div>
         <div class="board col-md-6">
             <div id="actionChoice" title="Combat !" hidden>
@@ -29,8 +30,9 @@
         </div>
         <div class="player2 col-md-3">
             <div class='row' id="namePlayer2"></div>
-            <div class='row' id="lifePoints1"></div>
+            <div class='row' id="lifePoints2"></div>
             <div class='row' id="weapon2"></div>
+            <div class='row' id="protect2"></div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
