--- a/etape 3/index.html
+++ b/etape 3/index.html
@@ -11,12 +11,13 @@
 </head>
     <body class="container-fluid">
         <div class="player1 col-md-3">
-            <div class='row' id="namePlayer1"></div>
-            <div class='row' id="lifePoints1"></div>
-            <div class='row' id="weapon1"></div>
-            <div class='row' id="protect1"></div>
+            <div class="row" id="namePlayer1"></div>
+            <div class="row" id="lifePoints1"></div>
+            <div class="row" id="weapon1"></div>
+            <div class="row" id="protect1"></div>
         </div>
-        <div class="board col-md-6">
+        <div class="col-md-6">
+            <table class="board"></table> 
             <div id="actionChoice" title="Combat !" hidden>
                 <p>
                     Que voulez-vous faire ?
@@ -26,13 +27,13 @@
                 <p>
                     Voulez-vous faire une nouvelle partie ?
                 </p>
-            </div>
+            </div>   
         </div>
         <div class="player2 col-md-3">
-            <div class='row' id="namePlayer2"></div>
-            <div class='row' id="lifePoints2"></div>
-            <div class='row' id="weapon2"></div>
-            <div class='row' id="protect2"></div>
+            <div class="row" id="namePlayer2"></div>
+            <div class="row" id="lifePoints2"></div>
+            <div class="row" id="weapon2"></div>
+            <div class="row" id="protect2"></div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
