--- a/etape 3/index.html
+++ b/etape 3/index.html
@@ -21,11 +21,11 @@
                 <div class="collapse" id="collapseExample">
                     <div class="well">
                        <ul class="deletePoint">
-                           <li>Chacun attaque à son tour.</li>
-                           <li>Les dégâts infligés dépendent de l’arme possédée par le joueur.</li>
-                           <li>Le joueur peut choisir d’attaquer ou de se défendre contre le prochain coup.</li>
-                           <li>Lorsque le joueur se défend, il encaisse 50% de dégâts en moins qu’en temps normal.</li>
-                           <li>Dès que les points de vie d’un joueur (initialement à 100) tombent à 0 , celui-ci a perdu. Un message s’affiche et la partie est terminée.</li>
+                           <li><p>Chacun attaque à son tour.</p></li>
+                           <li><p>Les dégâts infligés dépendent de l’arme possédée par le joueur.</p></li>
+                           <li><p>Le joueur peut choisir d’attaquer ou de se défendre contre le prochain coup.</p></li>
+                           <li><p>Lorsque le joueur se défend, il encaisse 50% de dégâts en moins qu’en temps normal.</p></li>
+                           <li><p>Dès que les points de vie d’un joueur (initialement à 100) tombent à 0 , celui-ci a perdu. Un message s’affiche et la partie est terminée.</p></li>
                        </ul>
                     </div>
                 </div>
@@ -40,14 +40,10 @@
             <div class="grid table-responsive col-md-6">
                 <table class="board table"></table> 
                 <div id="actionChoice" title="Combat !" hidden>
-                    <p>
-                        Que voulez-vous faire ?
-                    </p>
+                    <p>Que voulez-vous faire ?</p>
                 </div>
                 <div id="newGame" title="Nouvelle partie ?" hidden>
-                    <p>
-                        Voulez-vous faire une nouvelle partie ?
-                    </p>
+                    <p>Voulez-vous faire une nouvelle partie ?</p>
                 </div>   
             </div>
             <div class="player2 col-md-3">
