Ajustement du plateau en CSS, création d'un historique

--- a/etape 3/index.html
+++ b/etape 3/index.html
@@ -35,12 +35,12 @@
                 <div id="lifePoints1"></div>
                 <div id="weapon1"></div>
                 <div id="protect1"></div>
+                <div id="historic1" class="well historic">Historique :</div>
             </div>
             <div class="grid table-responsive col-md-6">
                 <table class="board table"></table> 
-                <div id="actionChoice" title="Combat !" hidden>
-                    <p>Que voulez-vous faire ?</p>
-                </div>
+                <div id="actionChoice" title="Combat !" hidden></div>
+                <div id="informationMessage" title="Information" hidden></div>
                 <div id="newGame" title="Nouvelle partie ?" hidden>
                     <p>Voulez-vous faire une nouvelle partie ?</p>
                 </div>   
@@ -50,6 +50,7 @@
                 <div id="lifePoints2"></div>
                 <div id="weapon2"></div>
                 <div id="protect2"></div>
+                <div id="historic2" class="well historic">Historique :</div>
             </div>   
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
